--- a/Fundamentos do Desenvolvimento Web/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
+++ b/Fundamentos do Desenvolvimento Web/bloco-5-javascript-dom-eventos-e-web-storage/dia-1-javascript-dom-e-seletores/index.html
@@ -13,25 +13,25 @@
 
     <section class="emergency-tasks">
       <div>
-        <h3>Urgente e Importante</h3>
+        <h3 id="importante">Urgente e Importante</h3>
       </div>
       <div>
-        <h3>Urgente e Não-Importante</h3>
+        <h3 id="Nao importante">Urgente e Não-Importante</h3>
       </div>
     </section>
 
     <section class="no-emergency-tasks">
       <div>
-        <h3>Não-Urgente e Importante</h3>
+        <h3 class="Jesus">Não-Urgente e Importante</h3>
       </div>
       <div>
-        <h3>Não-Urgente e Não-Importante</h3>
+        <h3 class="Nao Deus">Não-Urgente e Não-Importante</h3>
       </div>
     </section>
 
     <footer id="footer-container">
       <div>&copy; Trybe</div>
     </footer>
-    <script src="script.js"></script>
+    <script src="scriptEx1.js"></script>
   </body>
 </html>
