--- a/Fundamentos do Desenvolvimento Web/bloco-5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/index.html
+++ b/Fundamentos do Desenvolvimento Web/bloco-5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/index.html
@@ -16,5 +16,18 @@
         Phasellus at diam rutrum, gravida libero pellentesque, luctus urna. Aliquam ac mi diam. Vivamus et risus eget augue ultricies tempus a vitae lorem. Aenean diam ex, molestie sit amet scelerisque et, euismod pellentesque dui. Nulla vel quam vel velit fringilla semper sed non felis. Curabitur sit amet viverra nisi. Donec rutrum, est ac bibendum lobortis, purus quam feugiat nisl, non porta felis velit at nisl. Fusce eleifend odio accumsan nibh efficitur, ac tempus metus dictum. Vivamus augue neque, vehicula et scelerisque a, ullamcorper in enim. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;
         Etiam in pharetra quam. Aliquam eget lorem sit amet justo commodo faucibus. Praesent mollis, quam at scelerisque gravida, diam orci ullamcorper ipsum, vel pharetra massa orci nec eros. Morbi aliquet consequat diam, eu dapibus lorem tincidunt quis. Vestibulum urna mauris, commodo ac molestie sed, commodo a tortor. Donec dictum blandit eros at varius. Vivamus dapibus condimentum risus. Vivamus magna neque, luctus eu eleifend vitae, lobortis sed eros. Sed tincidunt aliquam lectus, at varius felis pulvinar eu. Duis tincidunt bibendum neque, a ultrices felis porta eu. Pellentesque quam mauris, hendrerit vel cursus eu, tincidunt et risus. Vestibulum euismod eleifend sagittis. In ornare condimentum tincidunt.</p>
     </div>
+    <div>
+        <H2>Abaixo algumas funções para ler melhor : )</H2>
+        <H3>Digite a cor que voce quer de fundo na pagina, favor digitar em inglês:</H3>
+            <input id="Cor" type="text" > 
+            <button id="btn">Enviar</button>
+            <p id="resultado"></p>
+        <h3>Digite a cor do texto:</h3>
+            <input id="corDoTexto" type="text" > 
+            <button id="btnTxt">Enviar</button>
+            <p id="cordef"></p>
+        <h3>Digite aqui </h3>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
