--- a/Fundamentos do Desenvolvimento Web/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-javascript-e-frameworks-css/for.html
+++ b/Fundamentos do Desenvolvimento Web/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-2-bibliotecas-javascript-e-frameworks-css/for.html
@@ -5,25 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="bootstrap-5.1.3-dist/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="meu.css">
     <script src="jquery-3.6.0.min.js"></script>
     <script src="bootstrap-5.1.3-dist/js/bootstrap.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <header id="trybe-header">
+    <header>
+        <div class="container text-center">
         <h1>Trybe Trip</h1>
+    </div>
     </header>
         <form action="" method="get">
-            <div class="form-group">
+            <div class="form-group container">
                 <label for="full-name">Nome:</label>
-                <input class="form-control" type="text" name="name" id="full-name" class="format" placeholder="Digite seu nome completo" maxlength="40" minlength="10" required>
+                <input class="form-control" type="text" name="name" placeholder="Digite seu nome completo" maxlength="40" minlength="10" required>
             </div>
-            <div class="form-group">
+            <div class="form-group container">
                 <label for="email">E-mail:</label>
                 <input class="form-control" type="email" name="email" id="email" class="format"placeholder="Digite seu e-mail" maxlength="50"   minlength="10" required>
             </div>
-            <div class="form-group">
+            <div class="form-group container">
             <label for="opcao1">
                 <input type="radio" name="opcao" id="opcao1" value="opcao1"> Opção 1 
             </label>
@@ -37,15 +39,15 @@
                 <input type="radio" name="opcao" id="opcao4" value="opcao4"> Opção 4
             </label>
             </div>
-            <div class="form-group" >
+            <div class="form-group container" >
                 <p>Espaço para digitar a resposta</p>
                 <textarea name="sobreMin" id="sobre" cols="30" rows="10"></textarea>
             </div>
-            <div class="form-group" >
+            <div class="form-group container" >
                 <label for="data">Data:</label>
                 <input type="date" name="dia" id="data">
             </div>
-            <div class="form-group"> 
+            <div class="form-group container"> 
                 <label for="conc1">
                 <input type="checkbox" name="conc1" id="conc1">Concordo 1 
                 </label> 
@@ -54,8 +56,10 @@
                 <input type="checkbox" name="conc1" id="conc2"> Concordo 2
                 </label>
             </div>
-    <button type="submit" class="btn-primary">Enviar</button>
-    <button type="submit" class="buttons">Apagar</button>
-    </form>
+            <div class="container">
+                <button type="submit" class="btn-primary">Enviar</button>
+                <button type="reset" class="buttons">Apagar</button>
+            </div>
+</form>
 </body>
 </html>
